fix: add snapshot commands